HelpMePlay | 1.0.2
	New Behaviors:
		- Players can now hold any modifier key to prevent the automated selection of Threads of Fate.
	New Features:
	Changes:
		- Tanaan Jungle is now more reliably selected from the Hero's Call Board for the Alliance.
		- Only players below level 50 are now considered eligible for War Mode automation.
	Bug Fixes:
		- Fixed an issue where Alliance players weren't reliably opted in to War Mode.
		- Fixed an issue where Alliance players were opted out of War Mode automatically.