@@ -155,6 +155,7 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Warlord Breka Grimaxe 1"]												= "Let's get out of the citadel and figure out how to get back home."
 	L["Warlord Breka Grimaxe 2"]												= "I know my way around Orgrimmar."
 	L["Archmage Khadgar 1"]														= "FOR AZEROTH!"
+	L["Archmage Khadgar 2"]														= "You are about to embark on a dangerous mission, and you may not be able to return immediately."
 	L["Johnny Awesome 1"] 														= "Well, we are having some problems at the Sludge Fields, located northeast of here. Warden Stillwater could use your help."
 	L["Johnny Awesome 2"]														= "That's all."
 	L["Johnny Awesome 3"]														= "THAT'S ALL, JOHNNY AWESOME. TAKE IT OR LEAVE IT!"
@@ -167,6 +168,7 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Bat Handler Maggotbreath 1"]												= "I need to take a bat to the Dawning Isles."
 	L["Ambermill Dimensional Portal 1"]											= "<Use the Ambermill Dimensional Portal.>"
 	L["Vanguard Battlemage 1"]													= "I must help Khadgar. Send me to the Blasted Lands!"
+	L["Thaelin Darkanvil 1"]													= "Yes. I need you to help me operate that enormous tank."
 	L["Zidormi 1"]																= "Can you show me what Tirisfal Glades was like before the Battle for Lordaeron?"
 	L["Holgar Stormaxe 1"]														= "I've heard this tale before..."
 	L["Holgar Stormaxe 2"]														= "Are you sure you want to skip the Broken Shore introduction?"
